# k-beauty-landing-page

./: .env  .env.example  .gitignore  17c3bca0-f175-44c5-bc33-7c74d72208c1.txt  29921f99-69f6-4ba4-b7e1-02187262be18.txt  31e9edfc-29c5-4842-a079-9d8e9b7b8b9b.txt  4bcc288d-137d-4f93-86f7-70213df5866f.txt  68687979-40c6-4b89-b697-68c1f1a7e73e.txt  6c1e9c2f-ec71-41fd-b573-3ccf59fd53aa.txt  878c0559-32a2-46fc-8f93-d8aa27eaee59.txt  ARCHITECTURE_LAYERING_CLARIFICATION.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  DATABASE_SCHEMA.md  DEVOPS_CONTEXT.md  DEVOPS_TECHNICAL_DETAILS.md  ENV_MANAGEMENT.md  INFRASTRUCTURE_LAYER_REFACTOR.md  SETUP_ARCHITECTURE_TOOLS.md  System Design Document v2.md  System Design Document.md  b5051cfe-f260-4047-9413-d2c6ec274cdd.txt  c132056a-ce57-45e9-bdf4-108502267a20.txt  c891b61a-8067-47e1-bf40-b6a28f3abea0.txt  database_schema.sql  f38d0f6e-e674-49da-9443-32cf8e19c0f3.txt  test-dummy-data.json
backend/: .env.example  README.md  a7aee072-bd7e-4fe6-b39e-b46aa270dc06.txt  alembic.ini  pyproject.toml  requirements.txt  seed_dummy_data.py  seed_shipping_rates.py
backend/alembic/: env.py
backend/alembic/versions/: 3791e7e3ee49_add_inventory_adjustment_log_table.py  3a48f2f0eb7c_initial_create_all_tables.py  42bb5e628149_add_carrier_column_to_shipments_table.py  6a373c9d8be8_add_cancellation_and_refund_fields_to_.py  6a4e51fc136f_rename_order_status_to_payment_status_.py  (+5 more)
backend/rules/: architecture_rules.json
backend/scripts/: ast_analyzer.py  create_admin.py  delete_dummy_data.py  dependency_resolver.py  diagram_generator.py  report_generator.py  rule_checker.py  seed_dummy_data.py  seed_fulfillment_partner_orders.py  seeders.py  validate_architecture.py
backend/src/: __init__.py  config.py  main.py
backend/src/utils/: auth.py  (+2 more)
backend/tests/: conftest.py
(+157 files in other folders)
