[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k-beauty-backend"
version = "0.1.0"
description = "K-Beauty Landing Page Backend - FastAPI + PostgreSQL"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "K-Beauty Team"}
]

dependencies = [
    # Core
    "FastAPI==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",

    # Database
    "SQLAlchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",

    # Data Validation
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",

    # PayPal
    "paypalrestsdk==1.13.1",
    "httpx==0.25.1",

    # Email
    "python-dotenv==1.0.0",

    # Logging
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",

    # Development
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "W", "F", "I", "N"]
ignore = ["E501", "N818"]  # Line too long (handled by black), Exception naming convention

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120

[tool.hatch.build.targets.wheel]
packages = ["src"]
